assets/_dev/src/scss/pages/_mes-rdv.scss
.myrdv, .emprunt {

  &__container {
    padding : 2.5rem 10.1rem;
  }

  &__content {
    padding       : 1.85rem 2.53rem;
    background    : white;
    border-radius : 10px;
    //box-shadow     : 0px 2px 4px rgba(0, 0, 0, 0.25);
  }


  &__nav {
    &.--space-between{
      display: flex;
      justify-content: space-between;
    }
    ul {
      margin-bottom   : 1.5rem;
      display         : flex;
      align-items     : center;
      justify-content : flex-start;

      li {
        color       : $primaryDark;
        font-family : $titleFont;
        background-color: $primaryWhite;
        font-weight : 500;
        font-size   : 1em;
        cursor      : pointer;
        position    : relative;
        transition: all .3s ease;
        padding: 0.8rem;
        border: 1px solid transparent;
        border-radius: 4px;
        &.--active{
          background-color : $light;
          &::before{
            width: 20%;
          }
        }

/*        &:before {
          content          : '';
          position         : absolute;
          width            : 0;
          height           : 2px;
          bottom           : -10px;
          left             : 0;
          transition: all .2s ease-out;
          background-color : $primaryLight;
        }*/
        &::after{
          content: attr(data-count);
          position: absolute;
          top: -12.5px;
          right: -12.5px;
          background-color: $primaryLight;
          color: $primaryWhite;
          display: flex;
          align-items: center;
          justify-content: center;
          border-radius: 50%;
          width: 25px;
          height: 25px;
          font-size: 0.8rem;
          font-weight: 500;
        }
        &[data-count="0"]::after{
          content: "";
          display: none;
        }

        &:hover {
          color : $primaryLight;
/*          &::before{
            width: 20%;
          }*/
        }

        &:not(:last-child) {
          margin-right : 1.5rem;
        }
      }
    }
  }


  &__list{
    margin-top: 3rem;
    h3{
      margin-bottom: 1rem;
    }
    p.text__small{
      margin-bottom: 2rem;
    }
    & > div {
      display: none;
    }

    .--display{
      display: block;
    }
  }

  &__contents {
    background-color : $white;
    //box-shadow       : $boxShadowOut;
    border-radius    : $borderRadiusSmall;
    padding          : 2rem 3rem;
    max-width        : 90rem;
    margin           : 2rem auto 5em auto;

    &-list {
      margin-top : 2em;
    }

    &-user {
      display         : flex;
      justify-content : space-between;
      align-items     : center;
      padding         : 1rem;
      transition      : all .2s ease-in-out;
      position        : relative;

      &.--disabled{
        opacity: .8;
        cursor: not-allowed;
        user-select: none;

        &:hover{
          background-color: white;
        }
      }
      &.--passed{
        opacity: .9;
        &:hover{
          background-color: $greenLight;
        }
      }

      &:hover {
        background-color : #F1FAFB;
        border-radius    : 10px;
      }
      &-head{
        margin-top : 2rem;
        border-radius: 10px 10px 0 0;
        background-color : #F1FAFB;
        box-sizing: border-box;
        padding : 1rem 165px 1rem 1rem;
        &.--full{
          padding-right: 1rem;
        }
      }

      &:not(:last-child) {
        &::after {
          content          : "";
          position         : absolute;
          display          : block;
          bottom           : -16px;
          width            : 100%;
          left             : 0;
          height           : 1px;
          background-color : lightgrey;
          margin           : 1rem 0;
        }
      }

      &.--tag-value{
        position: relative;
        &::before{
          content: attr(data-value);
          position: absolute;
          top: 0;
          right: 0;
          padding: .5rem 1rem;
          color: white;
          border-radius: 0 0 0 5px;
          font-family: $titleFont;
          min-width: 100px;
          box-sizing: border-box;
          text-align: center;
        }
        &[data-value="Effectué"]{
          &::before{
            background-color: $greenLight;
          }
        }
        &[data-value="Annulé"]{
          &::before{
            background-color: $redDark;
            opacity: .8;
          }
        }
      }


      &-img {
        img {
          max-width     : 100px;
          border-radius : 50%;
        }
      }

      &-info, &-info-notice {
        flex                  : 1;
        display               : grid;
        grid-template-areas   : "name speciality city date";
        grid-template-columns : repeat(4, 1fr);
        grid-gap              : 3%;
        margin                : 0 4rem;
        align-items: center;

        .title {
          font-family : $titleFont;
          font-size   : 1rem;
          color       : $primaryDark;
          font-weight : 500;
          line-height : 2;
        }

        .desc {
          font-size   : 1rem;
          color       : $black;
          font-weight : 400;
          font-family : $mainFont;
          line-height : 2;
        }
        ul.desc{
          list-style: "- ";
          padding-left: .65rem;
          color: $primaryDark;
          li{
            color: $black;
          }
        }
      }

      &-inter{
        margin: 0;

        .myrdv__contents-user-date{
          .desc{
            font-weight: 600;
            font-size: 1.2rem;
          }
        }
      }

      &-info-notice{
        grid-template-areas: "name speciality city date notice";
        grid-template-columns: repeat(5, 1fr) !important;
      }

      &-name {
        grid-area : name;
      }

      &-speciality {
        grid-area : speciality;
      }

      &-city {
        grid-area : city;
      }
      &-date{
        grid-area: date;
      }
      &-notice{
        grid-area: notice;
        .desc{
          svg{
            margin-right: .1rem;
          }
        }
      }

      &-btn {
        display: flex;
        align-items: center;
        a {
          min-width: 150px;
          box-sizing: border-box;
          &:not(:last-child){
            margin-right : 1rem;
          }
          svg {
            transition : all .3s ease-in-out;
            transform  : rotate(0);
          }

          &:hover svg {
            transition : all .5s ease-in-out;
            transform  : rotate(180deg);
          }
        }
      }
    }
  }

}

